// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create-anywidget (Bun) > template-react 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "bun build js/widget.jsx --minify --format=esm --outdir=src/ipyfoo/static --asset-naming=[name].[ext]"
	},
	"dependencies": {
		"@anywidget/react": "0.0.8",
		"react": "^18.3.1",
		"react-dom": "^19.0.0"
	},
	"devDependencies": {}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "bun"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import * as React from "react";
import { createRender, useModelState } from "@anywidget/react";
import "./widget.css";

const render = createRender(() => {
	const [value, setValue] = useModelState("value");
	return (
		<div className="ipyfoo">
			<button onClick={() => setValue(value + 1)}>
				count is {value}
			</button>
		</div>
	);
});

export default { render };
",
    "path": "js/widget.jsx",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
]
`;

exports[`create-anywidget (Bun) > template-react-ts 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "bun build js/widget.tsx --minify --format=esm --outdir=src/ipyfoo/static --asset-naming=[name].[ext]",
		"typecheck": "tsc --noEmit"
	},
	"dependencies": {
		"@anywidget/react": "0.0.8",
		"react": "^18.3.1",
		"react-dom": "^19.0.0"
	},
	"devDependencies": {
		"@types/react": "^18.3.12",
		"@types/react-dom": "^19.0.1",
		"typescript": "^5.7.2"
	}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "bun"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import * as React from "react";
import { createRender, useModelState } from "@anywidget/react";
import "./widget.css";

const render = createRender(() => {
	const [value, setValue] = useModelState<number>("value");
	return (
		<div className="ipyfoo">
			<button onClick={() => setValue(value + 1)}>
				count is {value}
			</button>
		</div>
	);
});

export default { render };
",
    "path": "js/widget.tsx",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
  {
    "content": "{
	"include": [
		"js"
	],
	"compilerOptions": {
		"target": "ES2020",
		"module": "ESNext",
		"lib": [
			"ES2020",
			"DOM",
			"DOM.Iterable"
		],
		"skipLibCheck": true,
		"moduleResolution": "bundler",
		"allowImportingTsExtensions": true,
		"resolveJsonModule": true,
		"isolatedModules": true,
		"noEmit": true,
		"jsx": "react",
		"strict": true,
		"noUnusedLocals": true,
		"noUnusedParameters": true,
		"noFallthroughCasesInSwitch": true
	}
}",
    "path": "tsconfig.json",
  },
]
`;

exports[`create-anywidget (Bun) > template-vanilla 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "bun build js/widget.js --minify --format=esm --outdir=src/ipyfoo/static --asset-naming=[name].[ext]"
	},
	"dependencies": {},
	"devDependencies": {}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "bun"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import "./widget.css";

function render({ model, el }) {
	let btn = document.createElement("button");
	btn.innerHTML = \`count is \${model.get("value")}\`;
	btn.addEventListener("click", () => {
		model.set("value", model.get("value") + 1);
		model.save_changes();
	});
	model.on("change:value", () => {
		btn.innerHTML = \`count is \${model.get("value")}\`;
	});
	el.classList.add("ipyfoo");
	el.appendChild(btn);
}

export default { render };
",
    "path": "js/widget.js",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
]
`;

exports[`create-anywidget (Bun) > template-vanilla-deno-jsdoc 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`src/ipyfoo/static/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]
",
    "path": "pyproject.toml",
  },
  {
    "content": "{
	"lock": false,
	"compilerOptions": {
		"checkJs": true,
		"allowJs": true,
		"lib": [
			"ES2020",
			"DOM",
			"DOM.Iterable"
		]
	},
	"fmt": {
		"exclude": [
			".venv"
		]
	},
	"lint": {
		"exclude": [
			".venv"
		]
	}
}",
    "path": "deno.json",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints


",
    "path": ".gitignore",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import confetti from "https://esm.sh/canvas-confetti@1";

/** @typedef {{ value: number }} Model */

/** @type {import("npm:@anywidget/types").Render<Model>} */
function render({ model, el }) {
	let btn = document.createElement("button");
	btn.innerHTML = \`count is \${model.get("value")}\`;
	btn.addEventListener("click", () => {
		model.set("value", model.get("value") + 1);
		model.save_changes();
	});
	model.on("change:value", () => {
		confetti();
		btn.innerHTML = \`count is \${model.get("value")}\`;
	});
	el.classList.add("ipyfoo");
	el.appendChild(btn);
}

export default { render };
",
    "path": "src/ipyfoo/static/widget.js",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "src/ipyfoo/static/widget.css",
  },
]
`;

exports[`create-anywidget (Bun) > template-vanilla-ts 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "bun build js/widget.ts --minify --format=esm --outdir=src/ipyfoo/static --asset-naming=[name].[ext]",
		"typecheck": "tsc --noEmit"
	},
	"dependencies": {},
	"devDependencies": {
		"@anywidget/types": "0.2.0",
		"typescript": "^5.7.2"
	}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "bun"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import type { RenderContext } from "@anywidget/types";
import "./widget.css";

/* Specifies attributes defined with traitlets in ../src/ipyfoo/__init__.py */
interface WidgetModel {
	value: number;
	/* Add your own */
}

function render({ model, el }: RenderContext<WidgetModel>) {
	let btn = document.createElement("button");
	btn.innerHTML = \`count is \${model.get("value")}\`;
	btn.addEventListener("click", () => {
		model.set("value", model.get("value") + 1);
		model.save_changes();
	});
	model.on("change:value", () => {
		btn.innerHTML = \`count is \${model.get("value")}\`;
	});
	el.classList.add("ipyfoo");
	el.appendChild(btn);
}

export default { render };
",
    "path": "js/widget.ts",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
  {
    "content": "{
	"include": [
		"js"
	],
	"compilerOptions": {
		"target": "ES2020",
		"module": "ESNext",
		"lib": [
			"ES2020",
			"DOM",
			"DOM.Iterable"
		],
		"skipLibCheck": true,
		"moduleResolution": "bundler",
		"allowImportingTsExtensions": true,
		"resolveJsonModule": true,
		"isolatedModules": true,
		"noEmit": true,
		"jsx": "react",
		"strict": true,
		"noUnusedLocals": true,
		"noUnusedParameters": true,
		"noFallthroughCasesInSwitch": true
	}
}",
    "path": "tsconfig.json",
  },
]
`;

exports[`create-anywidget > template-react 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "esbuild js/widget.jsx --minify --format=esm --bundle --outdir=src/ipyfoo/static"
	},
	"dependencies": {
		"@anywidget/react": "0.0.8",
		"react": "^18.3.1",
		"react-dom": "^19.0.0"
	},
	"devDependencies": {
		"esbuild": "^0.24.0"
	}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import * as React from "react";
import { createRender, useModelState } from "@anywidget/react";
import "./widget.css";

const render = createRender(() => {
	const [value, setValue] = useModelState("value");
	return (
		<div className="ipyfoo">
			<button onClick={() => setValue(value + 1)}>
				count is {value}
			</button>
		</div>
	);
});

export default { render };
",
    "path": "js/widget.jsx",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
]
`;

exports[`create-anywidget > template-react-ts 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "esbuild js/widget.tsx --minify --format=esm --bundle --outdir=src/ipyfoo/static",
		"typecheck": "tsc --noEmit"
	},
	"dependencies": {
		"@anywidget/react": "0.0.8",
		"react": "^18.3.1",
		"react-dom": "^19.0.0"
	},
	"devDependencies": {
		"@types/react": "^18.3.12",
		"@types/react-dom": "^19.0.1",
		"typescript": "^5.7.2",
		"esbuild": "^0.24.0"
	}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import * as React from "react";
import { createRender, useModelState } from "@anywidget/react";
import "./widget.css";

const render = createRender(() => {
	const [value, setValue] = useModelState<number>("value");
	return (
		<div className="ipyfoo">
			<button onClick={() => setValue(value + 1)}>
				count is {value}
			</button>
		</div>
	);
});

export default { render };
",
    "path": "js/widget.tsx",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
  {
    "content": "{
	"include": [
		"js"
	],
	"compilerOptions": {
		"target": "ES2020",
		"module": "ESNext",
		"lib": [
			"ES2020",
			"DOM",
			"DOM.Iterable"
		],
		"skipLibCheck": true,
		"moduleResolution": "bundler",
		"allowImportingTsExtensions": true,
		"resolveJsonModule": true,
		"isolatedModules": true,
		"noEmit": true,
		"jsx": "react",
		"strict": true,
		"noUnusedLocals": true,
		"noUnusedParameters": true,
		"noFallthroughCasesInSwitch": true
	}
}",
    "path": "tsconfig.json",
  },
]
`;

exports[`create-anywidget > template-vanilla 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "esbuild js/widget.js --minify --format=esm --bundle --outdir=src/ipyfoo/static"
	},
	"dependencies": {},
	"devDependencies": {
		"esbuild": "^0.24.0"
	}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import "./widget.css";

function render({ model, el }) {
	let btn = document.createElement("button");
	btn.innerHTML = \`count is \${model.get("value")}\`;
	btn.addEventListener("click", () => {
		model.set("value", model.get("value") + 1);
		model.save_changes();
	});
	model.on("change:value", () => {
		btn.innerHTML = \`count is \${model.get("value")}\`;
	});
	el.classList.add("ipyfoo");
	el.appendChild(btn);
}

export default { render };
",
    "path": "js/widget.js",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
]
`;

exports[`create-anywidget > template-vanilla-deno-jsdoc 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`src/ipyfoo/static/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]
",
    "path": "pyproject.toml",
  },
  {
    "content": "{
	"lock": false,
	"compilerOptions": {
		"checkJs": true,
		"allowJs": true,
		"lib": [
			"ES2020",
			"DOM",
			"DOM.Iterable"
		]
	},
	"fmt": {
		"exclude": [
			".venv"
		]
	},
	"lint": {
		"exclude": [
			".venv"
		]
	}
}",
    "path": "deno.json",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints


",
    "path": ".gitignore",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import confetti from "https://esm.sh/canvas-confetti@1";

/** @typedef {{ value: number }} Model */

/** @type {import("npm:@anywidget/types").Render<Model>} */
function render({ model, el }) {
	let btn = document.createElement("button");
	btn.innerHTML = \`count is \${model.get("value")}\`;
	btn.addEventListener("click", () => {
		model.set("value", model.get("value") + 1);
		model.save_changes();
	});
	model.on("change:value", () => {
		confetti();
		btn.innerHTML = \`count is \${model.get("value")}\`;
	});
	el.classList.add("ipyfoo");
	el.appendChild(btn);
}

export default { render };
",
    "path": "src/ipyfoo/static/widget.js",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "src/ipyfoo/static/widget.css",
  },
]
`;

exports[`create-anywidget > template-vanilla-ts 1`] = `
[
  {
    "content": "# ipyfoo

## Installation

\`\`\`sh
pip install ipyfoo
\`\`\`

or with [uv](https://github.com/astral-sh/uv):

\`\`\`sh
uv add ipyfoo
\`\`\`

## Development

We recommend using [uv](https://github.com/astral-sh/uv) for development.
It will automatically manage virtual environments and dependencies for you.

\`\`\`sh
uv run jupyter lab example.ipynb
\`\`\`

Alternatively, create and manage your own virtual environment:

\`\`\`sh
python -m venv .venv
source .venv/bin/activate
pip install -e ".[dev]"
jupyter lab example.ipynb
\`\`\`

The widget front-end code bundles it's JavaScript dependencies. After setting up Python,
make sure to install these dependencies locally:

\`\`\`sh
npm install
\`\`\`

While developing, you can run the following in a separate terminal to automatically
rebuild JavaScript as you make changes:

\`\`\`sh
npm run dev
\`\`\`

Open \`example.ipynb\` in JupyterLab, VS Code, or your favorite editor
to start developing. Changes made in \`js/\` will be reflected
in the notebook.
",
    "path": "README.md",
  },
  {
    "content": "{
	"cells": [
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"%load_ext autoreload\\n",
				"%autoreload 2\\n",
				"%env ANYWIDGET_HMR=1"
			]
		},
		{
			"cell_type": "code",
			"execution_count": null,
			"metadata": {},
			"outputs": [],
			"source": [
				"from ipyfoo import Widget\\n",
				"Widget()"
			]
		}
	],
	"metadata": {
		"language_info": {
			"name": "python"
		}
	},
	"nbformat": 4,
	"nbformat_minor": 2
}",
    "path": "example.ipynb",
  },
  {
    "content": "node_modules
.venv
dist
.DS_Store

# Python
__pycache__
.ipynb_checkpoints

src/ipyfoo/static
",
    "path": ".gitignore",
  },
  {
    "content": "{
	"scripts": {
		"dev": "npm run build -- --sourcemap=inline --watch",
		"build": "esbuild js/widget.ts --minify --format=esm --bundle --outdir=src/ipyfoo/static",
		"typecheck": "tsc --noEmit"
	},
	"dependencies": {},
	"devDependencies": {
		"@anywidget/types": "0.2.0",
		"typescript": "^5.7.2",
		"esbuild": "^0.24.0"
	}
}",
    "path": "package.json",
  },
  {
    "content": "[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyfoo"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using \`uv\`, you can install these development dependencies with:
# \`pip install -e ".[dev]"\`
# If you're using \`uv\` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by \`uv\`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyfoo/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyfoo/static/widget.js"]
skip-if-exists = ["src/ipyfoo/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
",
    "path": "pyproject.toml",
  },
  {
    "content": "import importlib.metadata
import pathlib

import anywidget
import traitlets

try:
    __version__ = importlib.metadata.version("ipyfoo")
except importlib.metadata.PackageNotFoundError:
    __version__ = "unknown"


class Widget(anywidget.AnyWidget):
    _esm = pathlib.Path(__file__).parent / "static" / "widget.js"
    _css = pathlib.Path(__file__).parent / "static" / "widget.css"
    value = traitlets.Int(0).tag(sync=True)
",
    "path": "src/ipyfoo/__init__.py",
  },
  {
    "content": "import type { RenderContext } from "@anywidget/types";
import "./widget.css";

/* Specifies attributes defined with traitlets in ../src/ipyfoo/__init__.py */
interface WidgetModel {
	value: number;
	/* Add your own */
}

function render({ model, el }: RenderContext<WidgetModel>) {
	let btn = document.createElement("button");
	btn.innerHTML = \`count is \${model.get("value")}\`;
	btn.addEventListener("click", () => {
		model.set("value", model.get("value") + 1);
		model.save_changes();
	});
	model.on("change:value", () => {
		btn.innerHTML = \`count is \${model.get("value")}\`;
	});
	el.classList.add("ipyfoo");
	el.appendChild(btn);
}

export default { render };
",
    "path": "js/widget.ts",
  },
  {
    "content": ".ipyfoo button {
	background: linear-gradient(
		300deg,
		#9933ff 33.26%,
		#ff6666 46.51%,
		#faca30 59.77%,
		#00cd99 73.03%,
		#00ccff 86.29%
	);
	border-radius: 10px;
	border: 0;
	color: white;
	cursor: pointer;
	font-family: "Roboto", sans-serif;
	font-size: 2em;
	margin: 10px;
	padding: 10px 20px;
	transition: transform 0.25s ease-in-out;
}

.ipyfoo button:hover {
	transform: scale(1.05);
}
",
    "path": "js/widget.css",
  },
  {
    "content": "{
	"include": [
		"js"
	],
	"compilerOptions": {
		"target": "ES2020",
		"module": "ESNext",
		"lib": [
			"ES2020",
			"DOM",
			"DOM.Iterable"
		],
		"skipLibCheck": true,
		"moduleResolution": "bundler",
		"allowImportingTsExtensions": true,
		"resolveJsonModule": true,
		"isolatedModules": true,
		"noEmit": true,
		"jsx": "react",
		"strict": true,
		"noUnusedLocals": true,
		"noUnusedParameters": true,
		"noFallthroughCasesInSwitch": true
	}
}",
    "path": "tsconfig.json",
  },
]
`;
